Allにまとめた
http://localhost:4001/documentation/all/

にドキュメントの内容まとめた

--- a/docs/_includes/examples/navbar-color.html
+++ b/docs/_includes/examples/navbar-color.html
@@ -24,6 +24,9 @@
           Docs
         </a>
         <div class="navbar-dropdown">
+          <a class="navbar-item" href="{{ site.url }}/documentation/all/">
+            All
+          </a>
           <a class="navbar-item" href="{{ site.url }}/documentation/overview/start/">
             Overview
           </a>
