--- a/docs/_includes/examples/navbar.html
+++ b/docs/_includes/examples/navbar.html
@@ -20,6 +20,9 @@
           Docs
         </a>
         <div class="navbar-dropdown{% if include.boxed %} is-boxed{% endif %}">
+          <a class="navbar-item" href="{{ site.url }}/documentation/all/">
+            All
+          </a>
           <a class="navbar-item" href="{{ site.url }}/documentation/overview/start/">
             Overview
           </a>
